--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "xtb",
   "version": "0.0.1",
   "description": "eXtensible Twitch Bot",
-  "main": "app.js",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
 	"start": "node app.js"
