--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "eXtensible Twitch Bot",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-	"start": "node app.js"
+    "test": "mocha",
+    "start": "node app.js"
   },
   "keywords": [
     "twitch",
@@ -18,6 +18,7 @@
   },
   "license": "MIT",
   "dependencies": {
+    "mocha": "^4.0.1",
     "tmi.js": "^1.2.0"
   }
 }
