--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "license": "MIT",
   "dependencies": {
     "mocha": "^4.0.1",
-    "tmi.js": "^1.2.0"
+    "tmi.js": "^1.2.0",
+    "uuid": "^3.1.0"
   }
 }
