--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "eXtensible Twitch Bot",
   "main": "index.js",
   "scripts": {
-    "test": "mocha"
+    "test": "eslint . && mocha"
   },
   "keywords": [
     "twitch",
@@ -17,8 +17,18 @@
   },
   "license": "MIT",
   "dependencies": {
+    "eslint": "^4.11.0",
     "mocha": "^4.0.1",
     "tmi.js": "^1.2.0",
-    "uuid": "^3.1.0"
+    "uuid": "^3.1.0",
+    "winston": "^2.4.0"
+  },
+  "devDependencies": {
+    "eslint-config-google": "^0.9.1",
+    "eslint-config-standard": "^10.2.1",
+    "eslint-plugin-import": "^2.8.0",
+    "eslint-plugin-node": "^5.2.1",
+    "eslint-plugin-promise": "^3.6.0",
+    "eslint-plugin-standard": "^3.0.1"
   }
 }
